--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -1,3 +1,10 @@
+<link rel="stylesheet" href="/public/vendors/bootstrap/bootstrap.css" />
+<link
+  rel="stylesheet"
+  href="/public/vendors/font-awesome/css/font-awesome.css"
+/>
+<link rel="stylesheet" href="/public/kanbas/home.css" />
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,9 +15,9 @@
     <div style="display: flex; flex-direction: row; gap: 12px; width: 100%">
       <div class="kanbasNavigation">
         <ul>
-          <li><a href="/public/kanbas/profile/index.html">Account</a></li>
+          <li><a href="/kanbas/profile/index.html">Account</a></li>
           <li><a href="#">Dashboard</a></li>
-          <li><a href="/public/kanbas/home.html">Courses</a></li>
+          <li><a href="/kanbas/home.html">Courses</a></li>
           <li><a href="#">Calendar</a></li>
           <li><a href="#">Inbox</a></li>
           <li><a href="#">History</a></li>
@@ -21,15 +28,15 @@
       </div>
       <div class="courseNavigation">
         <ul>
-          <li><a href="/public/kanbas/home.html">Home</a></li>
+          <li><a href="/kanbas/home.html">Home</a></li>
           <li><a href="#">Modules</a></li>
           <li><a href="#">Piazza</a></li>
           <li><a href="#">Zoom Meetings</a></li>
           <li>
-            <a href="/public/kanbas/assignments/index.html">Assignments</a>
+            <a href="/kanbas/assignments/index.html">Assignments</a>
           </li>
           <li><a href="#">Quizzes</a></li>
-          <li><a href="/public/kanbas/grades.html">Grades</a></li>
+          <li><a href="/kanbas/grades.html">Grades</a></li>
           <li><a href="#">People</a></li>
           <li><a href="#">Panopto Video</a></li>
           <li><a href="#">Discussions</a></li>
