--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -7,9 +7,9 @@
 <div style="display: flex; flex-direction: row; gap: 12px; width: 100%;">
   <div class="kanbasNavigation">
     <ul>
-      <li><a href="#">Account</a></li>
+      <li><a href="/kanbas/profile/index.html">Account</a></li>
       <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Courses</a></li>
+      <li><a href="/kanbas/home.html">Courses</a></li>
       <li><a href="#">Calendar</a></li>
       <li><a href="#">Inbox</a></li>
       <li><a href="#">History</a></li>
@@ -20,13 +20,15 @@
   </div>
   <div class="courseNavigation">
     <ul>
-      <li><a href="/public/kanbas/home.html">Home</a></li>
+      <li><a href="/kanbas/home.html">Home</a></li>
       <li><a href="#">Modules</a></li>
       <li><a href="#">Piazza</a></li>
       <li><a href="#">Zoom Meetings</a></li>
-      <li><a href="assignments/index.html">Assignments</a></li>
+      <li>
+        <a href="/kanbas/assignments/index.html">Assignments</a>
+      </li>
       <li><a href="#">Quizzes</a></li>
-      <li><a href="grades.html">Grades</a></li>
+      <li><a href="/kanbas/grades.html">Grades</a></li>
       <li><a href="#">People</a></li>
       <li><a href="#">Panopto Video</a></li>
       <li><a href="#">Discussions</a></li>
