--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -8,9 +8,9 @@
     <div style="display: flex; flex-direction: row; gap: 12px; width: 100%">
       <div class="kanbasNavigation">
         <ul>
-          <li><a href="/public/kanbas/profile/index.html">Account</a></li>
+          <li><a href="/kanbas/profile/index.html">Account</a></li>
           <li><a href="#">Dashboard</a></li>
-          <li><a href="/public/kanbas/home.html">Courses</a></li>
+          <li><a href="/kanbas/home.html">Courses</a></li>
           <li><a href="#">Calendar</a></li>
           <li><a href="#">Inbox</a></li>
           <li><a href="#">History</a></li>
