--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -222,6 +222,37 @@
               <div class="assignmentInfo">
                 <a href="#" class="assignmentModule">Multiple Modules</a> |
                 <span class="assignmentStatus">Not Availible Yet</span>
+                <!-- Fill in the blanks to create an input field who's unique identifier is XYZ, has a tooltip that displays ABC, and a placeholder that says RST. -->
+                <___1___  ___2___='XYZ'  ___3___='ABC'  ___4___='RST'/>
+               1: input
+                2: id
+                3: title
+                4: placeholder
+                <input
+  ___1___="___2___"
+  value="___3___"
+/>
+<!-- Rewrite the following component in the blanks to create a dropdown with a single option that displays as "Tenured Faculty" on the browser, but is submitted to the server as "TENURED" -->
+  <___1___  name="role">
+    <___2___  value="___3___">
+        ___4___
+    </___5___>
+ </___6___>
+ <select name="role">
+    <option value="TENURED">Tenured Faculty</option>
+</select>
+<!-- It is a good practice to make the clickable area of HTML elements such as input fields and buttons as small as possible to economize on screen space, especially on small screens of mobile devices. yes or no and why 
+ -->
+ <!-- It is a good practice to associate HTML label elements to HTML radio and checkbox buttons to increase their clickable area. Yes or no and why-->
+ <!-- 
+  no, 
+
+  -->
+
+
+
+
+
               </div>
             </li>
           </ul>
